--- a/index.html
+++ b/index.html
@@ -7,13 +7,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+
     <title>To-Do</title>
   </head>
   <body>
+    <div class="container">
+      <header class="header">
+        <div class="header__msg">
+          <h1>Welcome Back, User</h1>
+          <h2>
+            <span class="text--thin">You have</span> 5
+            <span class="text--thin">tasks to complete</span>
+          </h2>
+        </div>
+        <button class="btn">
+          <i class="fas fa-plus"></i>
+          New Task
+        </button>
+      </header>
+    </div>
     <script src="script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/3aa8f0b32e.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
