--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +24,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- Header -->
       <header class="header">
         <div class="header__msg">
           <h1>Welcome Back, User</h1>
@@ -24,16 +33,21 @@
             <span class="text--thin">tasks to complete</span>
           </h2>
         </div>
-        <button class="btn">
+        <button class="btn show-modal">
           <i class="fas fa-plus"></i>
           New Task
         </button>
       </header>
+      <!-- Modal -->
+      <div class="modal hidden">
+        <button class="close-modal">&times;</button>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime,
+          enim?
+        </p>
+      </div>
+      <div class="overlay hidden"></div>
     </div>
     <script src="script.js"></script>
-    <script
-      src="https://kit.fontawesome.com/3aa8f0b32e.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
