--- a/index.html
+++ b/index.html
@@ -85,7 +85,21 @@
           </div>
         </form>
       </div>
-      <div id="circle" class="todo-circ"></div>
+      <!-- <div class="grid">
+        <div class="col-1" id="col__to-do"></div>
+        <div class="col-1" id="col__prog"></div>
+        <div class="col-1" id="col__done"></div>
+      </div> -->
+
+      <div class="card" id="to-do">
+        <div class="badge badge--todo">to-do</div>
+        Finish Wireframe
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+          officiis dignissimos nam ea reiciendis possimus?
+        </p>
+      </div>
+
       <div class="overlay hidden"></div>
     </div>
     <script src="script.js"></script>
