--- a/index.html
+++ b/index.html
@@ -85,19 +85,52 @@
           </div>
         </form>
       </div>
-      <!-- <div class="grid">
-        <div class="col-1" id="col__to-do"></div>
-        <div class="col-1" id="col__prog"></div>
-        <div class="col-1" id="col__done"></div>
-      </div> -->
+      <div class="grid">
+        <div class="column" id="col__to-do">
+          <div class="col__header">
+            <h1>To-Do</h1>
+            <hr />
+          </div>
+          <div class="card" id="to-do">
+            <div class="badge badge--to-do">to-do</div>
+            <h3><i class="far fa-check-circle fa-sm"></i> Finish Wireframe</h3>
 
-      <div class="card" id="to-do">
-        <div class="badge badge--todo">to-do</div>
-        Finish Wireframe
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
-          officiis dignissimos nam ea reiciendis possimus?
-        </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+              officiis dignissimos nam ea reiciendis possimus?
+            </p>
+          </div>
+        </div>
+        <div class="column" id="col__prog">
+          <div class="col__header">
+            <h1>In Progress</h1>
+            <hr />
+          </div>
+          <div class="card" id="in-prog">
+            <div class="badge badge--prog">in progress</div>
+            <h3><i class="far fa-check-circle fa-sm"></i> Write Summary</h3>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+              officiis dignissimos nam ea reiciendis possimus?
+            </p>
+          </div>
+        </div>
+        <div class="column" id="col__done">
+          <div class="col__header">
+            <h1>Completed</h1>
+            <hr />
+          </div>
+          <div class="card" id="completed">
+            <div class="badge badge--comp">completed</div>
+            <h3><i class="far fa-check-circle fa-sm"></i> Plan</h3>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+              officiis dignissimos nam ea reiciendis possimus?
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="overlay hidden"></div>
