complete UI, but still missing form submit buttons

--- a/index.html
+++ b/index.html
@@ -100,6 +100,24 @@
               officiis dignissimos nam ea reiciendis possimus?
             </p>
           </div>
+          <div class="card" id="to-do">
+            <div class="badge badge--to-do">to-do</div>
+            <h3><i class="far fa-check-circle fa-sm"></i> Finish UI</h3>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+              officiis dignissimos nam ea reiciendis possimus?
+            </p>
+          </div>
+          <div class="card" id="to-do">
+            <div class="badge badge--to-do">to-do</div>
+            <h3><i class="far fa-check-circle fa-sm"></i> JS Code</h3>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+              officiis dignissimos nam ea reiciendis possimus?
+            </p>
+          </div>
         </div>
         <div class="column" id="col__prog">
           <div class="col__header">
@@ -109,6 +127,15 @@
           <div class="card" id="in-prog">
             <div class="badge badge--prog">in progress</div>
             <h3><i class="far fa-check-circle fa-sm"></i> Write Summary</h3>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+              officiis dignissimos nam ea reiciendis possimus?
+            </p>
+          </div>
+          <div class="card" id="in-prog">
+            <div class="badge badge--prog">in progress</div>
+            <h3><i class="far fa-check-circle fa-sm"></i> Finish JS Course</h3>
 
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
