--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
 
       <div class="overlay hidden"></div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
