--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <div class="header__msg">
           <h1>Welcome Back, User</h1>
           <h2>
-            <span class="text--thin">You have</span> 5
+            <span class="text--thin">You have</span>
+            <span id="total-task">5</span>
             <span class="text--thin">tasks to complete</span>
           </h2>
         </div>
