add edit mode handler

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <button class="close-modal">&times;</button>
         <!-- Form -->
         <form class="form">
-          <h1><i class="fas fa-tasks fa-xs"></i> Create New Task</h1>
+          <h1 class="form__title">
+            <i class="fas fa-tasks fa-xs"></i> Create New Task
+          </h1>
 
           <div class="form__group form__task-name">
             <label for="task-name"
